# psp-data-viewer

./: .firebaserc  .gitignore  CHANGELOG.md  README.md  bun.lockb  bunfig.toml  firebase.json  instance_config.json  package-lock.json  package.json  secrets_mapping.md  vitest.workspace.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  how-do-i---.md
.github/workflows/: create_instance.yml  deploy.yml  dev-deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  main_psp-data-viewer.yml  prod-deploy-skip-checks.yml  tests.yml
admin/: README.md  package.json
admin/build_tools/: compile.ts
admin/built/: articles.css  fonts.css  index.html  main.css  modal.css  status.css  tests.css
admin/src/: browser_interactions.ts  db_interaction.ts  firebase_init.ts  icons.ts  index.ts  modal.ts  status.ts  tests.ts  types.ts  web_components.ts
admin_v2/: .env.prod.publish  .gitignore  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mts  vitest.config.ts
admin_v2/build_tools/: compile.ts
admin_v2/src/: browser_interactions.ts  index.css  index.tsx  meta_stuff.tsx  state.tsx  theming.ts  types.tsx
admin_v2/test/: main.test.tsx
aws_lambda/: main.py
aws_lambda/layer_content/: requirements.txt
azure_functions/: .funcignore  .gitignore  function_app.py  requirements.txt
build_tools/: deploy_azure_instance.py  deploy_new_instance.azcli  file_fxns.ts  formatter.bat  formatter_config.txt  instance_config.ts  types.ts  version.ts  zip_azure.ts
build_tools/customer_config/: TEST_deploy_new.ts  deploy_new.ts  deploy_new_customer_config.ts  deploy_new_firebase_stripe.ts  dev-setup.ts  instance_config.ts  main.bicep  resources.bicep
customer_configs/: dev.yml  psp.yml  pspl.yml  tamu.yml  test.yml  vitest.config.ts
customer_configs/domain_connect/: create_azure_resources.ts  index.ts
customer_configs/tests/: config.test.ts  structure.ts
data_recovery/: main.py  methods.py  process.py
desktop_app/: bun.lockb  index.html  package.json  tailwind.config.ts  vite.config.ts
desktop_app/build_tools/: compile.ts
desktop_app/src/: App.tsx  build_info.ts  file_list_manipulation.ts  index.css  index.tsx  misc.ts  types.ts
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/capabilities/: default.json  main-file-access.json
desktop_app/src-tauri/icons/: icon.icns
desktop_app/src-tauri/src/: apply_calcs.rs  calc_resize_save.rs  compile.rs  create_hdf5.rs  create_timeframe.rs  file_init.rs  lib.rs  main.rs  process_channel_data.rs  process_tdms.rs  read_data.rs  resize_data.rs  stack_data.rs  types.rs
desktop_app/src-tauri/src/add_file/: csv.rs  get_all_channels.rs  get_tdms_name.rs  mod.rs
desktop_app/src-tauri/src/processing/: calc.rs  csv_df.rs  flatten.rs  mod.rs  read_all_csv.rs  resize.rs  save.rs  stack.rs
desktop_app/src-tauri/src/read_individual_channel/: mod.rs  process_channel_data.rs  read_csv.rs
docs/: bun.lockb  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
formatter/: .gitignore  Cargo.toml  Dioxus.toml
formatter/assets/: tailwind.css
formatter/assets/styling/: main.css
formatter/src/: checks.rs  components.rs  lib.rs  main.rs
formatter/src/components/: file_list.rs  mod.rs  processing_button.rs  sidebar.rs
formatter/src/processing/: create_df.rs  mod.rs  parse_types.rs
formatter/tests/: checks.rs
functions/: .gitignore  createTest_helpers.py  drive_download.py  main.py  read.py  requirements.txt  upload.py
functions/src/: auth.py  azure_auth.py  azure_cli.py  create_new_customer.py  create_new_dataset.py  db_management.py  permissions_request.py  stripe.py  stripe_webhooks.py
functions_backup/: .gitignore  createTest_helpers.py  main.py  read.py  requirements.txt
fxns_create_dataset/: main.py  requirements.txt
local_tools/: classes.py  classes_thing.py  from_influx.py  hdf5_test.py  local_compile.py  reduced_sensornet_csv_formatter.py  requirements.txt  sensornet_csv_formatter.py
mission/: .gitignore  README.md  bun.lockb  package.json
mission/build_tools/: compile.ts
mission/built/: fonts.css  gridstack.css  home.css  index.html  main.css  modal.css  procs.css  seating.css  status.css
mission/src/: db_interaction.ts  draw_steps.ts  firebase_init.ts  icons.ts  index.ts  init.ts  login.ts  status.ts  types.ts  web_components.ts
webapp/: .gitignore  README.md  bun.lockb  package-lock.json  package.json  pubspec.yaml  tsconfig.json  tsconfig.old.json  webpack.config.js
webapp/build_tools/: compile.ts
webapp_v2/: .gitignore  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.config.ts.timestamp-1741317410142-fdcc42f84f1a1.mjs
website/: bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1741317410126-94b04abdb7d33.mjs  vitest.config.ts
(+414 files in other folders)
