[package]
name = "formatter"
version = "0.1.0"
authors = ["Rajan Phadnis <22627030+rajanphadnis@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "formatter"
path = "src/lib.rs"

[dependencies]
csv = "1.3.0"
egui = "0.29"
egui_extras = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
image = "0.25"
rfd = "0.15"
# tokio = "1.40"
tokio = { version = "1.40", features = ["full"] }
# tokio-modbus = { version = "0.14", default-features = false }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
