[package]
name = "formatter"
version = "0.1.0"
authors = ["Rajan Phadnis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["desktop"] }
tdms = "0.3"
# plotly = "0.8"
# ndarray = "0.15"
polars = { version = "0.46.0", features = [
    # "asof_join",
    "fmt",
    "lazy",
    "ndarray",
    "streaming",
    # "timezones",
    # "zip_with",
] }
rayon = "1.10.0"
tokio = { version = "1.43.0", features = [
    # "rt",
    # "time",
    "sync",
    # "",
    # "",
    # "",
    # "",
] }
image = "0.25.5"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
bundle = []

[profile]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
