[package]
name = "desktop-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tdms = "0.3"
polars = { version = "0.46.0", features = [
    "asof_join",
    "lazy",
    "ndarray",
    "csv",
    "dtype-datetime",
    # "regex",
    "strings",
    "diagonal_concat"
] }
rayon = "1.10.0"
tokio = "1.43.0"
tauri-plugin-fs = "2"
hdf5 = { version = "0.8.1" }
hdf5-sys = { version = "0.8.1", features = ["static"] }
ndarray = "0.16.1"
csv = "1.3.1"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
